# VLA-GSE

./: .gitignore  README.md  pyproject.toml
LIBERO/: README.md  data_preparation.sh
LIBERO-plus/: README.md
LIBERO-plus/eval_files/: adaptive_ensemble.py  eval_libero.py  eval_libero_plus.sh  model2libero_interface.py  policy_goat.sh  policy_lora.sh
LIBERO-plus/train_files/: run_libero_fft.sh  run_libero_goat.sh  run_libero_gse.sh  run_libero_lora.sh  run_libero_other_peft.sh  vla_gse_cotrain_libero.yaml
LIBERO/eval_files/: adaptive_ensemble.py  eval_libero.py  eval_libero.sh  policy_fft.sh  policy_gse.sh  policy_other_peft.sh  port.sh
LIBERO/train_files/: run_libero_fft.sh  run_libero_goat.sh  run_libero_gse.sh  run_libero_lora.sh  run_libero_other_peft.sh  starvla_cotrain_libero.yaml
VLA_GSE/config/deepseeds/: deepspeed_single.yaml  deepspeed_zero2.yaml  deepspeed_zero3.yaml
VLA_GSE/config/training/: starvla_cotrain_libero.yaml  starvla_cotrain_oxe.yaml  starvla_train_adapter.yaml  vla_gse_cotrain_libero.yaml  vla_gse_train_adapter.yaml
VLA_GSE/dataloader/: __init__.py  lerobot_datasets.py  udl_vla.py  vlm_datasets.py
VLA_GSE/dataloader/gr00t_lerobot/: data_config.py  datasets.py  embodiment_tags.py  mixtures.py  schema.py  video.py
VLA_GSE/dataloader/gr00t_lerobot/transform/: __init__.py  base.py  concat.py  state_action.py  video.py
VLA_GSE/goat_peft/: __init__.py  peft_model.py
VLA_GSE/goat_peft/goat/: __init__.py  config.py  layer.py  model.py
VLA_GSE/goat_peft/utils/: __init__.py  peft_types.py
VLA_GSE/gse_peft/: __init__.py  peft_model.py
VLA_GSE/gse_peft/gse/: __init__.py  config.py  layer.py  model.py
VLA_GSE/gse_peft/utils/: __init__.py  peft_types.py
VLA_GSE/model/: tools.py
VLA_GSE/model/framework/: M1.py  QwenAdapter.py  QwenDual.py  QwenFast.py  QwenGR00T.py  QwenOFT.py  QwenPI.py  __init__.py  base_framework.py  share_tools.py
VLA_GSE/model/modules/action_model/: DiTActionHeader.py  GR00T_ActionHeader.py  LayerwiseFM_ActionHeader.py  MLP_ActionHeader.py  fast_ActionHeader.py
VLA_GSE/model/modules/action_model/flow_matching_head/: __init__.py  action_encoder.py  cross_attention_dit.py
VLA_GSE/model/modules/dino_model/: dino.py
VLA_GSE/model/modules/vlm/: Florence2.py  QWen2_5.py  QWen3.py
VLA_GSE/model/modules/vlm/tools/add_qwen_special_tokens/: README.md  add_special_tokens_to_qwen.py
VLA_GSE/training/: fft_gse_accumulate.py  train_fft.py  train_goat.py  train_gse.py  train_lora.py  train_other_peft.py
VLA_GSE/training/trainer_utils/: overwatch.py
deployment/model_server/: README.md  server_fft.py  server_goat.py  server_gse.py  server_lora.py  server_other_peft.py  server_policy.py
deployment/model_server/tools/: websocket_policy_client.py  websocket_policy_server.py
